edits to cv.rmd

--- a/CV.html
+++ b/CV.html
@@ -393,10 +393,10 @@ class="section level4">
 <h4><strong>UNIVERSITY OF CALIFORNIA, SANTA BARBARA –</strong> (2019 –
 2021)</h4>
 <div
-id="b.a.-in-geography-with-an-emphasis-in-geographic-information-science-gpa-3.624.0"
+id="b.a.-in-geography-with-an-emphasis-in-geographic-information-science"
 class="section level5">
 <h5><em>B.A. in Geography with an Emphasis in Geographic Information
-Science (GPA: 3.62/4.0)</em></h5>
+Science</em></h5>
 <p><br></p>
 </div>
 </div>
@@ -422,7 +422,7 @@ analytic model that meets client needs</li>
 (R Shiny) to view incremental progress on tasks or as a final product to
 clients.</li>
 <li>Creating REST API services for clients</li>
-<li>R Package development</li>
+<li>R/Python Package development</li>
 <li>Creating and maintaining project code bases through GitHub</li>
 <li>Presenting technical write ups and documentation for the client to
 convey results or work in progress</li>
@@ -486,7 +486,7 @@ contribute to writing labs, and leading portions of labs <br><br />
 <ul>
 <li><a href="https://anguswg-ucsb.github.io/projects.html"><strong>Data
 Science Portfolio</strong></a></li>
-<li>Highly proficient using R as a tool for data science and GIS:
+<li>Highly proficient using R/Python as a tool for data science and GIS:
 <ul>
 <li>Cleaning, organizing, aggregating, and analyzing both spatial and
 non-spatial data</li>
@@ -496,10 +496,10 @@ deployment</li>
 Networks, etc.)</li>
 <li>Processing text data for use in NLP ML models</li>
 <li>Creating R Shiny interactive dashboards</li>
-<li>Creating data visualizations in R</li>
+<li>Creating data visualizations in R/Python</li>
 <li>REST API Development</li>
-<li>R package development</li>
-<li>Creating reproducible code and workflow in R</li>
+<li>R/Python package development</li>
+<li>Creating reproducible code and workflows in R/Python</li>
 <li>Working in GitHub repositories and maintaining clean and up-to-date
 code bases.</li>
 <li>Web scraping</li>
@@ -507,15 +507,15 @@ code bases.</li>
 time series data</li>
 </ul></li>
 <li>Experienced using SQL</li>
-<li>Proficient in Python</li>
-<li>Experienced working and creating Docker images</li>
-<li>Experienced deploying docker images as containers within virtual
-machines onto a Cloud Infrastructure Provider (AWS, DigitalOcean).</li>
-<li>Working within cloud service environments</li>
+<li>Proficiency in AWS core services (S3, EC2, Lambda, DynamoDB, SQS,
+SNS, IAM, API Gateway)</li>
+<li>Experienced in creating Docker images</li>
+<li>Experienced deploying docker containers to Cloud Infrastructure
+Providers (AWS, DigitalOcean).</li>
 <li>Progressing through AWS Solutions Architect certificate</li>
 <li>Able to work with CSS and HTML code</li>
 <li>Proficient in Microsoft Office</li>
-<li>Experienced using ArcGIS Pro</li>
+<li>Experienced using QGIS, ArcGIS Pro, ArcGIS Online</li>
 </ul>
 </div>
 <div id="interests" class="section level5">
