--- a/index.html
+++ b/index.html
@@ -311,6 +311,9 @@ class="section level4">
 <h4><strong>LinkedIn:</strong> <a
 href="https://www.linkedin.com/in/angus-watters-0521a7209/"
 class="uri">https://www.linkedin.com/in/angus-watters-0521a7209/</a><br></h4>
+</div>
+<div id="phone-805-895-1590" class="section level4">
+<h4><strong>Phone:</strong> (805) 895-1590</h4>
 <center>
 <img src="UCSB-about-me.jpg" />
 </center>
