edit social links

--- a/index.html
+++ b/index.html
@@ -298,19 +298,17 @@ technical skills.</p>
 <p>In my free time I enjoy spending my time running, biking, working on
 puzzles, gardening, and cooking.</p>
 <hr />
+<div id="linkedin" class="section level4">
+<h4><a
+href="https://www.linkedin.com/in/angus-watters-0521a7209/"><strong>LinkedIn</strong></a><br></h4>
+</div>
+<div id="github" class="section level4">
+<h4><a
+href="https://github.com/anguswg-ucsb"><strong>GitHub</strong></a><br></h4>
+</div>
 <div id="email-anguswattersgmail.com" class="section level4">
 <h4><strong>Email:</strong> <a href="mailto:anguswatters@gmail.com"
 class="email">anguswatters@gmail.com</a><br></h4>
-</div>
-<div id="githubhttpsgithub.comanguswg-ucsb" class="section level4">
-<h4><strong>GitHub:</strong><a href="https://github.com/anguswg-ucsb"
-class="uri">https://github.com/anguswg-ucsb</a></h4>
-</div>
-<div id="linkedin-httpswww.linkedin.cominangus-watters-0521a7209"
-class="section level4">
-<h4><strong>LinkedIn:</strong> <a
-href="https://www.linkedin.com/in/angus-watters-0521a7209/"
-class="uri">https://www.linkedin.com/in/angus-watters-0521a7209/</a><br></h4>
 </div>
 <div id="phone-805-895-1590" class="section level4">
 <h4><strong>Phone:</strong> (805) 895-1590</h4>
